--- a/pendientes.html
+++ b/pendientes.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<link rel="icon" href="img/favicon-borreguitos.png">
-    <title>Nosotros - Borreguitos</title>
+    <title>Pedidos Pendientes - Borreguitos</title>
 	<link href="css/bootstrap.min.css" rel="stylesheet">
 	<link href="css/bootstrap-custom.css" rel="stylesheet">
 	<link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
@@ -27,7 +27,7 @@
 			<div class="collapse navbar-collapse" id="navbar">
 					<ul class="navbar-nav mx-auto">
 						<li class="nav-item">
-							<a class="nav-link" href="productos.html">Productos</a>
+							<a class="nav-link" href="#">Productos</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="#">Promociones</a>
@@ -44,8 +44,8 @@
 						<li class="nav-item">
 							<a class="nav-link" href="#">Misceláneos</a>
 						</li>
-						<li class="nav-item active">
-							<a class="nav-link" href="#">Nosotros</a>
+						<li class="nav-item">
+							<a class="nav-link" href="nosotros.html">Nosotros</a>
 						</li>
 					</ul>
 			
@@ -56,7 +56,7 @@
 						<li class="nav-item ms-4">
 							<a href="#" class="nav-link"><i class="las la-shopping-bag btn-icon"></i></a>
 						</li>
-					</ul>		
+					</ul>
 			
 					<form class="d-flex my-2 my-lg-0">
 						<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
@@ -66,74 +66,27 @@
 		</nav>
 	</header>
 	
-	<section id="hero-nosotros">
+	<section id="hero-pendientes">
 	
 		<div class="container">
 			
-			<h2>Quiénes Somos</h2>
-
-			<iframe width="100%" height="700" src="https://www.youtube.com/embed/EVsGLQ3e26M?si=usoTfLN5ADieYvrK" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-
-		</div>
-
-	</section>
-
-	<section id="historia" class="mas-vendidos-productos">
-
-		<div class="container">
-
-		</div>
-
-		<div class="container">
-
 			<div class="row">
-				
-				<h3>Escoge Borreguitos</h3>
-
-				<article class="col-lg-8 col-sm-8 col-12">
-
-					<p>Originalmente se creó la empresa Borreguitos como un medio para crear oportunidades de trabajo a mujeres de mayor edad (+40) que usualmente son discriminadas en el momento de buscar trabajo en favor de personas más jóvenes. La existencia de esta necesidad fue identificada al observar distintas tiendas de materiales de costura e hilos que ofrecían clases de costura siendo la mayoría de los clientes mujeres de mayor edad con tiempo libre al no encontrar un trabajo.</p>
-
-				<br>
-
-					<p>Al contar ya con las habilidades de costura, el tiempo libre para realizar encargos y la necesidad de dinero, se decidió crear una organización donde pudiéramos reunir esta mano de obra en necesidad y aprovechar sus habilidades para que pudieran generar ingresos más estables</p>
-
+				<article class="col-lg-4 col-sm-4 col-12 offset-lg-2">
+					<img src="img/pend-waldo.png" alt="waldo" class="img-fluid waldo-img">
+					<h4 class="titulo-celeste-2">Waldo</h4>
 				</article>
 
-				<article class="col-lg-3 col-sm-4 col-12 offset-1">
-
-					<img src="img/mujer-2.png" alt="mujer-2" class="img-fluid img-historia">
-
+				<article class="col-lg-6 col-sm-6 col-12 centrateeeee">
+					<h3>Pedidos Pendientes</h3><br>
+					<p>Perdimos de vista a Waldo y ya no lo encontramos. Cuando lo localicemos lo enviaremos directamente a tu casa :)</p> <br>
+					<a href="#" class="boton-naranja">Ubicación de Pedido</a>
 				</article>
-				
-				<div class="row">
-
-				<h3>Responsabilidad Social</h3>
-
-				<article class="col-lg-3 col-sm-4 col-12 me-5">
-
-					<img src="img/mujer-1.png" alt="mujer-1" class="img-fluid img-historia" width="300">
-
-				</article>
-
-				<article class="col-lg-8 col-sm-8 col-12">
-
-					<p>Se ha comprobado que hay beneficios terapéuticos al realizar una actividad manual y que la costura a mano en crochet también ofrece oportunidades para realizar terapia ocupacional a toda persona que se interese por aprender las técnicas de costura necesaria para realizar este producto.</p>
-
-				<br>
-
-					<p>Apoyamos el talento que se encuentra en Honduras para reforzar y concientizar sobre la apreciación al crochet, siendo un hobby se puede generar ingresos disfrutando del proceso creativo y a la vez dando una oportunidad a las mujeres que han sido amas de casa por mucho tiempo y que no han podido trabajar por diferentes motivos, pero desean generar ingresos, también a mujeres jubiladas que quieran sentirse útil aún después de su tiempo laboral.</p>
-
-				</article>
-
 			</div>
-
-			</div>
-
+			
 		</div>
-
+	
 	</section>
-
+	
 	<footer>
 		<div class="container">
 		
@@ -159,13 +112,13 @@
 						<div class="container">
 		
 							<div class="row">
-								<article class="col-lg-2 col-sm-2 col-2 offset-3">
+								<article class="col-lg-4 col-sm-4 col-4">
 									<i class="lab la-instagram icon-redes"></i>
 								</article>
-								<article class="col-lg-2 col-sm-2 col-2">
+								<article class="col-lg-4 col-sm-4 col-4">
 									<i class="lab la-twitter icon-redes"></i>
 								</article>
-								<article class="col-lg-2 col-sm-2 col-2">
+								<article class="col-lg-4 col-sm-4 col-4">
 									<i class="lab la-facebook icon-redes"></i>
 								</article>
 							</div>
@@ -181,7 +134,7 @@
 		</div>
 	</footer>
 
-	<script src="js/jquery.min.js"></script>	
+	<script src="js/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	
 </body>
