--- a/productos.html
+++ b/productos.html
@@ -24,7 +24,7 @@
 					<i class="las la-bars"></i>
 				</button>
 					  
-		<div class="collapse navbar-collapse" id="navbar">
+			<div class="collapse navbar-collapse" id="navbar">
 					<ul class="navbar-nav mx-auto">
 						<li class="nav-item active">
 							<a class="nav-link" href="#">Productos</a>
@@ -48,19 +48,29 @@
 							<a class="nav-link" href="nosotros.html">Nosotros</a>
 						</li>
 					</ul>
-			<form class="d-flex my-2 my-lg-0">
-				<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-				<button class="btn btn-outline-success btn-uwu" type="submit"><i class="las la-search"></i></button>
-			</form>
-		</div>
+			
+					<ul class="me-5">
+						<li class="nav-item">
+							<a href="perfil.html" class="nav-link"><i class="las la-user btn-icon"></i></a>
+						</li>
+						<li class="nav-item ms-4">
+							<a href="#" class="nav-link"><i class="las la-shopping-bag btn-icon"></i></a>
+						</li>
+					</ul>
+			
+					<form class="d-flex my-2 my-lg-0">
+						<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+						<button class="btn btn-outline-success btn-uwu" type="submit"><i class="las la-search"></i></button>
+					</form>
+			</div>
 		</nav>
 	</header>
 	
 <section id="productos" class="mas-vendidos-productos">
 
-	<div class="container ">
+	<div class="container">
 
-		<div class="row ">
+		<div class="row">
 
 			<article class="col-lg-3 col-sm-6 col-12">
 					<img src="img/prod-totoro.png" alt="totoro" class="img-producto img-fluid">
@@ -116,7 +126,7 @@
 				</article> 
 			
 			<article class="col-lg-3 col-sm-6 col-12">
-					<img src="img/prod-ckiqui.png" alt="chiqui" class="img-producto img-fluid">
+					<img src="img/prod-chiqui.png" alt="chiqui" class="img-producto img-fluid">
 					<h4 class="titulo-celeste">Chiqui</h4>
 					<h5 class="titulo-azul">L. 500.00</h5>
 					<img src="img/buy-png.png" alt="buy" class="img-buy img-fluid">
@@ -124,7 +134,7 @@
 
 		</div>
 
-		<div class="row ">
+		<div class="row">
 
 			<article class="col-lg-3 col-sm-6 col-12">
 					<img src="img/prod-wooper.png" alt="wooper" class="img-producto img-fluid">
