--- a/perfil.html
+++ b/perfil.html
@@ -77,8 +77,8 @@
 				
 				<article class="col-lg-7 col-sm-7 col-12">
 					<ul>
-						<li class="mx-auto boton-naranja"><a href="comprados.html" >Productos Comprados</a></li>
-						<li class="mx-auto boton-naranja"><a href="personalizados.html"></a>Productos Personalizados</a></li>
+						<li class="mx-auto boton-naranja"><a href="comprados.html">Productos Comprados</a></li>
+						<li class="mx-auto boton-naranja"><a href="personalizados.html">Productos Personalizados</a></li>
 						<li class="mx-auto boton-naranja"><a href="pendientes.html">Pedidos Pendientes</a></li>
 					</ul>
 
