--- a/pendientes.html
+++ b/pendientes.html
@@ -10,7 +10,8 @@
 	<link href="css/bootstrap-custom.css" rel="stylesheet">
 	<link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
 	<link href="css/style.css" rel="stylesheet">
-	
+	<meta name="keywords" content="hecho a mano, amigurumis, crochet, lana, peluches, anime, disney, tienda, ventas, personajes, series, compras">
+	<meta name="Description" content="pagina donde el usuario puede ver sus pedidos pendientes">
 </head>
 
 <body>
@@ -27,22 +28,22 @@
 			<div class="collapse navbar-collapse" id="navbar">
 					<ul class="navbar-nav mx-auto">
 						<li class="nav-item">
-							<a class="nav-link" href="#">Productos</a>
+							<a class="nav-link" href="productos.html">Productos</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#">Promociones</a>
+							<a class="nav-link" href="promociones.html">Promociones</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#">Más Vendidos</a>
+							<a class="nav-link" href="mas-vendidos.html">Más Vendidos</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#">Disney</a>
+							<a class="nav-link" href="disney.html">Disney</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#">Anime</a>
+							<a class="nav-link" href="anime.html">Anime</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#">Misceláneos</a>
+							<a class="nav-link" href="contacto.html">Contacto</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="nosotros.html">Nosotros</a>
@@ -91,14 +92,14 @@
 		<div class="container">
 		
 			<div class="row">
-				<article class="col-lg-4 col-sm-6 col-12 ">
+				<article class="col-lg-4 col-sm-4 col-12 ">
 					<h5>Nuestra Empresa</h5>
 					<br>
 					<p class="text-center">Términos de Uso</p>
 					<p class="text-center">Política de Privacidad</p>
 				</article>
 				
-				<article class="col-lg-4 col-sm-6 col-12">
+				<article class="col-lg-4 col-sm-4 col-12">
 					<h5>Contáctanos</h5>
 					<br>
 					<p>Edificio Morazán, frente a Mall El <br> Dorado, Blvr. Morazán, Tegucigalpa, <br>Francisco Morazán</p>
@@ -106,19 +107,19 @@
 					<p>+504 9995-6842</p>
 				</article>
 				
-				<article class="col-lg-4 col-sm-6 col-12">
+				<article class="col-lg-4 col-sm-4 col-12">
 					<h5>Síguenos</h5>
 					<br>
 						<div class="container">
 		
 							<div class="row">
-								<article class="col-lg-4 col-sm-4 col-4">
+								<article class="col-lg-2 col-sm-2 col-2 offset-3">
 									<i class="lab la-instagram icon-redes"></i>
 								</article>
-								<article class="col-lg-4 col-sm-4 col-4">
+								<article class="col-lg-2 col-sm-2 col-2">
 									<i class="lab la-twitter icon-redes"></i>
 								</article>
-								<article class="col-lg-4 col-sm-4 col-4">
+								<article class="col-lg-2 col-sm-2 col-2">
 									<i class="lab la-facebook icon-redes"></i>
 								</article>
 							</div>
